<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tipoCalculo">¿Cuántos días desea calcular?</string>
    <string name="app_name">Ritmubi</string>
    <string name="metodoDeCalculo">Seleccione </string>
    <string name="dia">Un solo día</string>
    <string name="variosDias">Varios Días</string>
    <string name="visualizacion">Visualización</string>
    <string name="soloTexto">Solo texto</string>
    <string name="soloGrafico">Solo Gráficos</string>
    <string name="textoGrafico">Texto y Gráficos</string>
    <string name="siguiente">Siguiente</string>
    <string name="unSoloDia">Biorritmo para un día</string>
    <string name="cuandoNacio">¿Cuándo nació?</string>
    <string name="calcular">Calcular</string>
    <string name="volver">Volver</string>
    <string name="biorritmoVariosDias">Biorritmo para varios días</string>
    <string name="hasta">Hasta</string>
    <string name="desde">Calcular desde</string>
    <string name="dias">dias</string>
    <string name="que_dia">¿Qué día desea calcular?</string>
    <string name="emocional">Emocional</string>
    <string name="fisico">Físico</string>
    <string name="intelectual">Intelectual</string>
    <string name="Mensaje">Tu Biorritmo los proximos Días</string>
    <string name="fecha">Fecha....</string>
    <string name="nuevoCalculo">Nuevo Cálculo</string>
</resources>