<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >
        
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

 
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:text="@string/cuandoNacio"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/selectorFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/tipoCalculo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/numeroDiasRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingBottom="5dp" >

        <RadioButton
            android:id="@+id/botonUnDia"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dia" />

        <RadioButton
            android:id="@+id/botonVariosDias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variosDias" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.01"
            android:text="@string/visualizacion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/tipoVisualizacionRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" >

            <RadioButton
                android:id="@+id/botonTextoYGraficos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/textoGrafico" />

            <RadioButton
                android:id="@+id/botonSoloGraficos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soloGrafico" />

            <RadioButton
                android:id="@+id/botonSoloTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soloTexto" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/siguiente" />

    </LinearLayout>

</LinearLayout>
</ScrollView>
